<resources>
    <string name="share_via">Share image with scrambled Exif via</string>
    <string name="share_multiple_via">Share images with scrambled Exif via</string>
    <string name="permission_request">Request permission</string>
    <string name="permission_sdcard_text">Scrambled Exif needs access to your files to read the images you share with it.\n\nPlease tap on the button below to grant the necessary permission.</string>

    <string name="instructions_title">Instructions</string>
    <string name="instructions_1">Select the pictures you wish to share from your gallery and tap on the share icon.</string>
    <string name="instructions_2">Select <i>Scrambled Exif</i> from the app list.</string>
    <string name="instructions_2_1">At this point, the metadata is being deleted!</string>
    <string name="instructions_3">Once this is done, the app list appears again. Just share the pictures like you normally would.</string>
    <string name="instructions_voila">Et voilà! You just shared some pictures without metadata with the world!</string>

    <string name="permissions_open_app_toast">Scrambled Exif needs file access.
        Please open the app and grant it from there</string>
    <string name="no_scrambleable_images">Couldn\'t find any images to scramble.</string>
    <string name="image_not_scrambleable">Couldn\'t scramble "%s" because it is not a JPEG image.</string>

    <string name="error_while_scrambling">An error occurred while scrambling "%s". Skipping...</string>

    <string name="privacy_policy_menu_item">Privacy Policy</string>
    <string name="privacy_policy_dialog_title" translatable="false">Scrambled Exif Privacy Policy</string>
    <string name="privacy_policy_dialog_text" translatable="false">This privacy policy governs your use of the software application Scrambled Eggsif for mobile devices that was created by juanitobananas (Juan García Basilio).\n\nThis privacy policy is possibly, though not probably, outdated. The newest privacy policy is available <a href="https://gitlab.com/juanitobananas/scrambled-exif/blob/master/PRIVACY.md#scrambled-exif-privacy-policy">here</a>.\n\n<b>Data collected by me</b>\n\nI, that is, the app developer, do not collect any personal information whatsoever.\n\n<b>Data collected by Google Play (only applies if downloaded from Google Play Store)</b>\n\nGoogle Inc. provides the developer, i.e. me, with anonymised user data (aggregate data) through the Google Play Developer Console.\n\nIf you review the app Google Inc. will additionally provide information about your device (Device, Manufacturer, Device type, Device language, CPU make, CPU model, Native platform, RAM (MB), Screen size, Screen density (dpi), OpenGL ES version and OS).\n\nPlease refer to the Google Play Store Privacy Policy (<a href="https://play.google.com/about/privacy-security/">https://play.google.com/about/privacy-security/</a>) for more information on how Google Inc. handles your data.\n\n<b>Data collected by F-Droid (only applies if downloaded from F-Droid)</b>\n\nAs far as I know, F-Droid Limited does not collect any personal information whatsoever.\n\nPlease refer to the F-Droid web page (<a href="https://f-droid.org/about/">https://f-droid.org/about/</a>) for more information.\n\n<b>Email communication</b>\n\nIf you contact me per email, I will exclusively use your contact data to process your inquiry.\n\nPlease feel free to contact me, e.g. per email (<a href="mailto:juam+scrambled@posteo.net">juam+scrambled@posteo.net</a>), if you want me to delete your data.</string>

    <!-- Strings related to Settings -->
    <string name="settings_menu_item">Settings</string>

    <string name="settings_force_image_rewrite">Force image rewrite</string>
    <string name="settings_force_image_rewrite_summary">This option forces rewriting the whole image file (normally only the EXIF data is removed).\n\nThis option makes removing EXIF data slower but safer, and could have an influence in picture quality.</string>

    <string name="settings_rename_images">Rename images</string>
    <string name="settings_rename_images_summary">Filenames can tell a recipient of the file the date and time that a photo was taken on some devices.\n\nThis option renames all shared images with a random filename.</string>

    <string name="settings_keep_jpeg_orientation">Keep orientation</string>
    <string name="settings_keep_jpeg_orientation_summary">This \"physically\" rotates the image according to the EXIF data in the original image.\n\nThis takes a little longer.</string>

    <string name="logging_title">Logging</string>

    <string name="settings_enable_logging">Enable logging</string>
    <string name="settings_enable_logging_summary">Write logs to app\'s cache directory. On non-rooted devices, only Scrambled Exif should be able to access these logs. You can send them to the dev using the option below.</string>

    <string name="settings_send_logs_to_dev">Send logs to dev</string>
    <string name="settings_send_logs_to_dev_summary">Perhaps he\'ll be able to help :)</string>

    <string name="title_activity_panic_settings">Panic Button Settings</string>

    <string name="panic_button_title">Panic Button</string>

    <string name="settings_panic_button_category_summary">With the following settings you can configure how Scrambled Exif reacts to an external panic button app (e.g. <i>Ripple</i>) trigger.</string>

    <string name="settings_panic_delete_cached_images">Delete cached images</string>
    <string name="settings_panic_delete_cached_images_summary">Once the images have been shared, these are safe to delete (a clean-up happens periodically anyway).</string>

    <string name="settings_panic_clear_app_data">Clear app data</string>
    <string name="settings_panic_clear_app_data_summary">Delete cached images and settings. Also kill app and remove from recently used.</string>

    <string name="licenses_menu_item">Licenses</string>
    <string name="licenses_about_libraries_text" translatable="false"><![CDATA[<br/><b>Scrambled Exif License</b><br/><br/>Copyright (c) 2018-2020 Juan García Basilio<br/><br/>This app is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.<br/><br/>This app is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the <a href="http://www.gnu.org/licenses/">GNU General Public License</a> for more details.<br/><br/><b>Third-party libraries</b><br/><br/>Here is a list of the libraries used by this app. Tap on them for more information.]]></string>

    <!-- ACRA -->
    <string name="acra_notification_channel_name">Crashes</string>
    <string name="acra_notification_title">Wooops! Crash detected 💩</string>
    <string name="acra_notification_text">Please send the report to the dev so that he can try to fix it.</string>
    <string name="acra_notification_send">Send email</string>

    <!-- MIUI permissions -->
    <string name="miui_permissions_title">Special permissions needed</string>
    <string name="miui_permissions_message">%s needs a special permission called \'Display pop-up windows while running in the background\' in modern Xiaomi (MIUI) devices. You have to grant it manually.\n\nPlease tap on the \'Take me there\' button or look for the setting manually.</string>
    <string name="miui_permissions_ok_button">Take me there</string>
    <string name="miui_permissions_dont_show_again_button">Don\'t show again</string>
</resources>
