<!--
  ~ Copyright (c) 2018 Juan García Basilio
  ~
  ~ This file is part of Scrambled Exif.
  ~
  ~ Scrambled Exif is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Scrambled Exif is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Scrambled Exif.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
<SwitchPreference
    android:defaultValue="true"
    android:title="@string/settings_force_image_rewrite"
    android:key="pref_rewrite_images"
    android:summary="@string/settings_force_image_rewrite_summary" />
<SwitchPreference
    android:defaultValue="true"
    android:title="@string/settings_keep_jpeg_orientation"
    android:key="pref_keep_jpeg_orientation"
    android:summary="@string/settings_keep_jpeg_orientation_summary" />
<SwitchPreference
    android:defaultValue="true"
    android:title="@string/settings_rename_images"
    android:key="pref_rename_images"
    android:summary="@string/settings_rename_images_summary" />
</PreferenceScreen>